--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -12,12 +12,15 @@
     "outDir": "../dist/",
     "rootDir": ".",
     "sourceMap": true,
-    "target": "es5",
+     "removeComments": false,
+     "suppressImplicitAnyIndexErrors": true,
+    "target": "es6",
     "inlineSources": true
   },
 
   "files": [
     "main.ts",
     "typings.d.ts"
+   
   ]
 }
